--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,26 @@
 name: deploy to lambda
 on: [push]
 jobs:
-  deploy_source:
-    name: build and deploy lambda
-    strategy:
-      matrix:
-        node-version: [12.x]
+  deploy_zip:
+    name: deploy lambda function
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: checkout source code
+        uses: actions/checkout@v3
+      # - name: Setup python environment
+      #   uses: actions/setup-python@v3
+      #   with:
+      #     python-version: '3.9'
+      #     architecture: 'x64'
+      - name: zip file
+        uses: montudor/action-zip@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: npm install and build
-        run: |
-          npm ci
-          npm run build --if-present
-        env:
-          CI: true
-      - name: zip
-        uses: montudor/action-zip@v0.1.0
-        with:
-          args: zip -qq -r ./bundle.zip ./
+          args: zip - qq -r ./bundle.zip ./
       - name: default deploy
         uses: appleboy/lambda-action@master
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: eu-west-1
-          function_name: my-function
+          aws_region: us-east-1
+          function_name: test-github-action
           zip_file: bundle.zip
